# kml-to-fbx

./: README.md  pyproject.toml
src/kml_to_obj/: __init__.py  cli.py  kml_parser.py  mesh_builder.py  models.py
tests/: test_cli_output_modes_unittest.py  test_edge_cases_unittest.py  test_kml_parser.py  test_polygon_holes.py
