[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kml-to-obj"
version = "0.1.0"
description = "Convert KML shapes to OBJ preserving names and materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kml2obj = "kml_to_obj.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
